almost finished forms

--- a/templates/add.html
+++ b/templates/add.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Add a Student</title>
@@ -6,7 +6,11 @@
 </head>
 <body>
     <h1>Add a Student</h1>
-    <form method="post">\
+    <form method="post">form
+    	<br>
+    	<input type="text" placeholder="what is your name?" name="Student_name">
+    	<br>
+    	<input type="text" placeholder="what year are you?" name="Student_year">
         <br>
         <input type="submit" value="Submit">
     </form>
