--- a/templates/student.html
+++ b/templates/student.html
@@ -11,6 +11,9 @@
 	Class: {{student.year}}<br>
 	Finished Lab: {{student.finished_lab}}
 	</p>
+	<form action="/" method="/delete/<student_id>">
+		<input type="submit" value="delete">
+	</form>
     <p><a href="{{url_for('home')}}">Home</a></p>
 
 </body>
