--- a/templates/student.html
+++ b/templates/student.html
@@ -11,7 +11,7 @@
 	Class: {{student.year}}<br>
 	Finished Lab: {{student.finished_lab}}
 	</p>
-	<form action="/" method="/delete/<student_id>">
+	<form action="/delete/{{student.student_id}}" method="POST">
 		<input type="submit" value="delete">
 	</form>
     <p><a href="{{url_for('home')}}">Home</a></p>
